Zase jsem tam něco ostyloval..

--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -7,7 +7,7 @@
                     <li class="divider-vertical"></li>
                     <li class="dropdown user">
                          <a href="#" class="dropdown-toggle avatar" data-toggle="dropdown">
-                            <b>Username</b><!-- Doplnit jmeno přihlášeného usera  --> 
+                            <b>User</b><!-- Doplnit jmeno přihlášeného usera  --> 
                             <span class="more"><i class="icon16 i-arrow-down-2"></i></span>
                         </a>
                         <ul class="dropdown-menu">
