--- a/app/templates/Request/userDemand.latte
+++ b/app/templates/Request/userDemand.latte
@@ -40,7 +40,7 @@
                                                 <td>{$demand->datum}</td>
                                                 <td>{$demand->stav}</td>
                                                 {if $demand->stav != 'čeká na posouzení'}
-                                                    <td>{$demand->datum}</td>
+                                                    <td>{$demand->dat_zmeny}</td>
                                                 {else}
                                                     <td>-</td>
                                                 {/if}
