- MICHAL : spravil som ti ten dropdown pre usera v header :) (+ nejake redirecty)

--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -31,7 +31,7 @@
                                         <li><a n:href="Sign:in">Přihlásit</a></li>
                                     {/if}
 
-                                        <li><a n:href="Useredit:">Přidej zákazníka</a></li>
+                                        <li><a n:href="Useredit:">Registrace zákazníka</a></li>
                                         <li><a n:href="Useredit:newEmployee">Přidej zaměstnance</a></li>
                                         <li><a n:href="Useredit:usersList">Seznam uživatelů</a></li>
                                         <li><a n:href="Team:teams">Týmy</a></li>
