--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -7,12 +7,16 @@
                     <li class="divider-vertical"></li>
                     <li class="dropdown user">
                          <a href="#" class="dropdown-toggle avatar" data-toggle="dropdown">
-                            <b>User</b><!-- Doplnit jmeno přihlášeného usera  --> 
+                            <b>{$userName}</b> 
                             <span class="more"><i class="icon16 i-arrow-down-2"></i></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li> <a href="users_edit.php?id_user=" class=""> <i class="icon16 i-king"></i> Nastavení</a></li> <!-- Doplnit id usera v href  --> 
+							{if $userId == 0}
+							<li> <a href="{link Sign:in}" class=""> <i class="icon16 i-exit"></i> Sign in</a> </li>
+							{else}
+							<li> <a href="{link Useredit:editUser $userId}" class=""> <i class="icon16 i-king"></i> Nastavení</a></li>
                             <li> <a href="{link Sign:out}" class=""> <i class="icon16 i-exit"></i> Logout</a> </li>
+							{/if}
                         </ul>
                     </li>
                     <li class="divider-vertical"></li>
