--- a/app/templates/Request/detail.latte
+++ b/app/templates/Request/detail.latte
@@ -1,48 +1,89 @@
+
+
+
 {* Latte template *}
 
 {block content}
 
-<h1 n:block=title>Detail poptavky</h1>
+{include ../header.latte}
 
-<p>
-    <b>Zakaznik: </b>{$demand->osoba->jmeno}<br />
-    <b>Datum: </b>{$demand->datum}<br />
-    <b>Stav: </b>{$demand->stav}<br />
-</p>
-<h2>Prirazene sluzby</h2>
-<p>
-        Zde je uváděn seznam rozšiřujících služeb. V rámci jedné zakázky se předpokládá, že firma 
-        provede kompletní architektonický návrh, na základě něho projekt a násldně výstavbu přízemní 
-        nepodsklepené budovy a půdními prostorami.
-</p>
-<table>
-    <thead>
-        <th>nazev</th>
-        <th>popis</th>
-    </thead>
-    <tbody>
-        {foreach $services as $service}
-            <tr>
-                <td>{$service->sluzba->nazev}</td>
-                <td>{$service->sluzba->popis}</td>
-            </tr>
-        {/foreach}
-    </tbody>
-</table>
-<p><b>Upresneni:</b>{$demand->specialni->text}</p>
-<br />
-{if $user->isInRole('admin') || $user->isInRole('manažer')}
-    {if $demand->stav != 'odmitnuto' && $demand->stav != 'přijato'}
-    <a href="{link odmitnout!, $demand->ID}">Odmitnout</a>
-    {/if}
-    {if $demand->stav == 'přijato'}
-    <a href="{link dokument!, $demand->ID}">Dokument</a>    
-    {/if}
-    <br />
-    <a href="{link Request:list}">Zpět na seznam</a> 
-{else}
-    <br />
-    <a href="{link Request:userDemand}">Zpět na seznam</a>  
-{/if}
-<br />
-<a href="{link Homepage:default}">Domu</a>
+
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Přidat službu </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Poptávka</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        <p>
+                                            <b>Zakaznik: </b>{$demand->osoba->jmeno}<br />
+                                            <b>Datum: </b>{$demand->datum}<br />
+                                            <b>Stav: </b>{$demand->stav}<br />
+                                        </p>
+                                        <hr>
+                                        <h2>Přiřazené služby</h2>
+                                        <p>
+                                                Zde je uváděn seznam rozšiřujících služeb. V rámci jedné zakázky se předpokládá, že firma 
+                                                provede kompletní architektonický návrh, na základě něho projekt a násldně výstavbu přízemní 
+                                                nepodsklepené budovy a půdními prostorami.
+                                        </p>
+                                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                            <thead>
+                                                <th>nazev</th>
+                                                <th>popis</th>
+                                            </thead>
+                                            <tbody>
+                                                {foreach $services as $service}
+                                                    <tr>
+                                                        <td>{$service->sluzba->nazev}</td>
+                                                        <td>{$service->sluzba->popis}</td>
+                                                    </tr>
+                                                {/foreach}
+                                            </tbody>
+                                        </table>
+                                        <p><b>Upresneni:</b>{$demand->specialni->text}</p>
+                                        <br />
+
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            {if $user->isInRole('admin') || $user->isInRole('manažer')}
+                                {if $demand->stav != 'odmitnuto' && $demand->stav != 'přijato'}
+                                <a href="{link odmitnout!, $demand->ID}">Odmitnout</a>
+                                {/if}
+                                {if $demand->stav == 'přijato'}
+                                <a href="{link dokument!, $demand->ID}">Dokument</a>    
+                                {/if}
+                                <br />
+                                <a href="{link Request:list}">Zpět na seznam</a> 
+                            {else}
+                                <br />
+                                <a href="{link Request:userDemand}">Zpět na seznam</a>  
+                            {/if}
+                            <br />
+                            <a href="{link Homepage:default}">Domu</a>
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
