--- a/app/templates/Team/detail.latte
+++ b/app/templates/Team/detail.latte
@@ -1,89 +1,129 @@
-{* Latte template *}
+
+    
+    {* Latte template *}
 
 {block content}
 
-<h1 n:block=title>Detail tymu</h1>
+{include ../header.latte}
 
-<p>
-    <b>Popis:</b> {$tym->popis}<br />
-    <b>Datum zalozeni:</b> {$tym->datum_zalozeni}<br />
-    <b>Aktivita:</b>
-    {if $tym->ukoncen == true}
-         Ukoncena cinnost<br />
-    {else}
-         Aktivni tym<br />
-    {/if}
-</p>
-{var $pom_i = 0;}
-<h2>Aktivni clenove</h2>
-<table>
-    <thead>
-        <td>Jmeno</td>
-        <td>Pozice</td>
-        <td>Datum pridani</td>
-        <td>Akce</td>
-    </thead>
-    <tbody>
-        {foreach $akt_clenove as $akt}
-            <tr>
-                <td>{$akt->osoba->jmeno}</td>
-                <td>{$akt->pozice}</td>
-                <td>{$akt->datum_pripojeni}</td>
-                <td><a href="{link delUser!, $tym->ID, $akt->osoba_id}" onclick="return confirm('Odebrat clena?')">odebrat</a></td>
-            </tr>
-            {? $pom_i++;}
-        {/foreach}    
-    </tbody>
-</table>
-{if $tym->ukoncen == false}    
-<p>Pridat clena tymu: 
-    <a href="{link Team:addMember, $tym->ID, 'architekt'}">architekt</a>, 
-    <a href="{link Team:addMember, $tym->ID, 'projektant'}">projektant</a>, 
-    <a href="{link Team:addMember, $tym->ID, 'stavbyvedoucí'}">stavbyvedouci</a>, 
-    <a href="{link Team:addMember, $tym->ID, 'manažer'}">manazer</a>
-</p>
-{/if}
-<h2>Aktivni projekty</h2>    
-<table>
-    <thead>
-        <td>ID</td>
-        <td>Popis</td>
-        <td>Etapa</td>
-        <td>Zakaznik</td>
-    </thead>
-    <tbody>
-        {foreach $sez_projektu as $proj}
-            <tr>
-                <td>{$proj->ID}</td>
-                <td>{$proj->popis}</td>
-                <td>{$proj->etapa}</td>
-                <td>{$proj->zakaznik->jmeno}</td>
-            </tr>
-        {/foreach}    
-    </tbody>
-</table>
-{? $pom_i = 0;}
-<h2>Byvaly clenove</h2>
-<table>
-    <thead>
-        <td>Jmeno</td>
-        <td>Pozice</td>
-        <td>Datum ukonceni</td>
-        {if $tym->ukoncen == false}
-            <td>Akce</td>
-        {/if}
-    </thead>
-    <tbody>
-        {foreach $byv_clenove as $byv}
-            <tr>
-                <td>{$byv->osoba->jmeno}</td>
-                <td>{$byv->pozice}</td>
-                <td>{$byv->datum_ukonceni}</td>
-                {if $tym->ukoncen == false}
-                    <td><a href="{link addUser!, $tym->ID, $byv->osoba_id}" onclick="return confirm('Pridat clena?')">pridat</a></td>
-                {/if}    
-            </tr>
-            {? $pom_i++;}
-        {/foreach}    
-    </tbody>
-</table>
+
+
+<div class="main">
+    {include ../menu.latte}
+    <section id="content">
+        <div class="wrapper">
+            <div class="container-fluid">
+                <div id="heading" class="page-header">
+                    <h1 n:block=title><i class="icon20 i-users"></i> Přidat poptavku </h1>
+                </div>
+
+                        
+                          <div class="row-fluid">
+                            <div class="span12">
+                                <div class="widget">
+                                    <div class="widget-title">
+                                        <div class="icon"><i class="icon20 i-vcard"></i></div> 
+                                        <h4>Poptávka</h4>
+                                        <a href="#" class="minimize"></a>
+                                    </div><!-- End .widget-title -->
+                                
+                                    <div class="widget-content">
+
+                                        <p>
+                                            <b>Popis:</b> {$tym->popis}<br />
+                                            <b>Datum zalozeni:</b> {$tym->datum_zalozeni}<br />
+                                            <b>Aktivita:</b>
+                                            {if $tym->ukoncen == true}
+                                                 Ukoncena cinnost<br />
+                                            {else}
+                                                 Aktivni tym<br />
+                                            {/if}
+                                        </p>
+                                        {var $pom_i = 0;}
+                                        <h2>Aktivní členové</h2>
+                                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                            <thead>
+                                                <td>Jmeno</td>
+                                                <td>Pozice</td>
+                                                <td>Datum pridani</td>
+                                                <td>Akce</td>
+                                            </thead>
+                                            <tbody>
+                                                {foreach $akt_clenove as $akt}
+                                                    <tr>
+                                                        <td>{$akt->osoba->jmeno}</td>
+                                                        <td>{$akt->pozice}</td>
+                                                        <td>{$akt->datum_pripojeni}</td>
+                                                        <td><a href="{link delUser!, $tym->ID, $akt->osoba_id}" onclick="return confirm('Odebrat clena?')">odebrat</a></td>
+                                                    </tr>
+                                                    {? $pom_i++;}
+                                                {/foreach}    
+                                            </tbody>
+                                        </table>
+                                        {if $tym->ukoncen == false}    
+                                        <p>Přidat člena týmu: 
+                                            <a href="{link Team:addMember, $tym->ID, 'architekt'}">architekt</a>, 
+                                            <a href="{link Team:addMember, $tym->ID, 'projektant'}">projektant</a>, 
+                                            <a href="{link Team:addMember, $tym->ID, 'stavbyvedoucí'}">stavbyvedouci</a>, 
+                                            <a href="{link Team:addMember, $tym->ID, 'manažer'}">manazer</a>
+                                        </p>
+                                        {/if}
+                                        <h2>Aktivní projekty</h2>    
+                                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                            <thead>
+                                                <td>ID</td>
+                                                <td>Popis</td>
+                                                <td>Etapa</td>
+                                                <td>Zakaznik</td>
+                                            </thead>
+                                            <tbody>
+                                                {foreach $sez_projektu as $proj}
+                                                    <tr>
+                                                        <td>{$proj->ID}</td>
+                                                        <td>{$proj->popis}</td>
+                                                        <td>{$proj->etapa}</td>
+                                                        <td>{$proj->zakaznik->jmeno}</td>
+                                                    </tr>
+                                                {/foreach}    
+                                            </tbody>
+                                        </table>
+                                        {? $pom_i = 0;}
+                                        <h2>Bývalí členové</h2>
+                                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover dataTable" id="dataTable">
+                                            <thead>
+                                                <td>Jmeno</td>
+                                                <td>Pozice</td>
+                                                <td>Datum ukonceni</td>
+                                                {if $tym->ukoncen == false}
+                                                    <td>Akce</td>
+                                                {/if}
+                                            </thead>
+                                            <tbody>
+                                                {foreach $byv_clenove as $byv}
+                                                    <tr>
+                                                        <td>{$byv->osoba->jmeno}</td>
+                                                        <td>{$byv->pozice}</td>
+                                                        <td>{$byv->datum_ukonceni}</td>
+                                                        {if $tym->ukoncen == false}
+                                                            <td><a href="{link addUser!, $tym->ID, $byv->osoba_id}" onclick="return confirm('Pridat clena?')">pridat</a></td>
+                                                        {/if}    
+                                                    </tr>
+                                                    {? $pom_i++;}
+                                                {/foreach}    
+                                            </tbody>
+                                        </table>
+    
+                                        
+                                    </div><!-- End .widget-content -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .span6  -->  
+                            
+                       </div>
+                                        
+                                        
+					
+                </div><!-- End .row-fluid  -->
+
+            </div> <!-- End .container-fluid  -->
+        </div> <!-- End .wrapper  -->
+{/block}      
