--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -7,15 +7,11 @@
                     <li class="divider-vertical"></li>
                     <li class="dropdown user">
                          <a href="#" class="dropdown-toggle avatar" data-toggle="dropdown">
-<<<<<<< HEAD
                             {if $user->isLoggedIn()}
-                            <b>{$user->getIdentity()->jmeno}</b><!-- Doplnit jmeno přihlášeného usera  --> 
+                             <b>{$user->getIdentity()->jmeno}</b>
                             {else}
-                                <b>Log-In</b><!-- Doplnit jmeno přihlášeného usera  --> 
+                              <b>{$userName}</b>  
                             {/if}
-=======
-                            <b>{$userName}</b> 
->>>>>>> e1c067f0e353b46285f9a2e25056e3e5e073cf54
                             <span class="more"><i class="icon16 i-arrow-down-2"></i></span>
                         </a>
                         <ul class="dropdown-menu">
