- do praveho horneho menu pridaná položka "moje projekty" + autorizácia k dokumentom

--- a/app/templates/Useredit/detail.latte
+++ b/app/templates/Useredit/detail.latte
@@ -23,7 +23,11 @@
 	<p>
 		<h3>Projekty :</h3>
 		{foreach $projekty as $projekt}
-			<br>Projekt : {$projekt->popis}
+			<br>Projekt : {$projekt->popis}		{if $projekt->etapa == 'zahájení'}
+                                                    -> Projekt ještě nebyl zahájen
+                                                {else}    
+                                                    <a href="{link Version:version, $projekt->dokument_id}">Dokument k projektu</a>
+                                                {/if}
 		{/foreach}
 	</p>	
 {/if}
