--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -19,6 +19,7 @@
 							<li> <a href="{link Sign:in}" class=""> <i class="icon16 i-exit"></i> Sign in</a> </li>
 							{else}
 							<li> <a href="{link Useredit:editUser $userId}" class=""> <i class="icon16 i-king"></i> Nastavení</a></li>
+							<li> <a href="{link Useredit:usersProjectList $userId}" class=""><i class="icon20  i-tag"></i> Moje projekty </a> </li>
                             <li> <a href="{link Sign:out}" class=""> <i class="icon16 i-exit"></i> Logout</a> </li>
 							{/if}
                         </ul>
